hard-gists/6156601/run.log
=== Docker Run Log for 6156601 ===
Started at: Mi 29. Okt 16:22:32 CET 2025

[2025-10-29 16:22:33] START: Running container for 6156601
[2025-10-29 16:22:33] SUCCESS: Container bdfc58bae7c53d348b20bfa298455e61472da459900540e72f36eaf39fa557fa started for 6156601
=== Container logs for 6156601 ===
  File "/snippet.py", line 14
    print query
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6156601 ===
[2025-10-29 16:22:35] INFO: Container bdfc58bae7c53d348b20bfa298455e61472da459900540e72f36eaf39fa557fa has stopped
